--- a/App.xaml
+++ b/App.xaml
@@ -2,10 +2,14 @@
     x:Class="Cloudsdale.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:Controls="clr-namespace:Cloudsdale.Controls" 
+    xmlns:Managers="clr-namespace:Cloudsdale.Managers">
 
     <!--Application Resources-->
     <Application.Resources>
+        <Controls:StatusColorConverter x:Key="SCC" />
+        <Managers:ArrayHasAnyVis x:Key="AHAV" />
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
