--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -49,13 +49,13 @@
                             <Image Source="{Binding Path=user.avatar.Preview}"
                                HorizontalAlignment="Center" VerticalAlignment="Center" Width="48" Height="48"
                                MouseLeftButtonUp="AvatarMouseUp" MouseLeftButtonDown="AvatarMouseDown"
-                               MouseLeave="AvatarMouseLeave" Stretch="UniformToFill" ImageFailed="AvatarImageFailed" />
+                               MouseLeave="AvatarMouseLeave" Stretch="UniformToFill" ImageFailed="AvatarImageFailed"/>
                         </Border>
                         <Border DataContext="{Binding Path=user}" Width="50" Height="15" 
                                 BorderBrush="Gray" BorderThickness="1" Background="{Binding Path=RoleBrush}"
                                 Visibility="{Binding Path=ShowTag}" CornerRadius="1">
                             <TextBlock Text="{Binding Path=RoleTag}" HorizontalAlignment="Center"
-                                       Foreground="White" FontSize="10" />
+                                       Foreground="White" FontSize="10" Name="Username" />
                         </Border>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="60,0,0,0">
@@ -129,6 +129,7 @@
     </phone:PhoneApplicationPage.Resources>
 
     <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}" Margin="0,0,0,0">
+        <MediaElement Name="mediaPlayer" />
         <controls:Pivot Title="&lt;Cloud name goes here&gt;" x:Name="cloudPivot" Margin="0,10,0,0">
             <controls:Pivot.HeaderTemplate>
                 <DataTemplate>
